fixes overflow-y issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,23 @@
 
 .App {
   text-align: center;
+
+
+}
+
+.page-container {
+  overflow-y: hidden;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
 }
 
 p {
   font-family: 'Alata', sans-serif;
   font-size: calc(3em + 2vw);
-  color: rgb(74, 74, 74)
+  color: rgb(74, 74, 74
+  )
 }
 
 #button {
@@ -27,3 +38,4 @@ p {
   background-color: rgb(252, 240, 128);
   box-shadow: none;
 }
+
