--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
 
 #footer-line-1, #footer-line-2 {
     font-family: 'Roboto', sans-serif;
-    font-size: calc(0.5em + 1vw);
+    font-size: calc(0.75em + 0.8vw);
     font-weight: 300;
 }
 
